added some info

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,65 @@
 </head>
 <body>
 
-  My name is SaNdeeP GunDA.
-  See More about me below!!
+ <div class="header">
+  <h1> SaNdeeP GunDA</h1>.
+  <h2>JAVA Developer CUM WEB Designer CUM SOFTWARE Developer</h2>
+</div>
+
+ <div class="tagline">
+   <h3>Learn More About Me</h3>
+   <p>I (Sandeep) is more interested in developing web applications and like to write code in java,develop java based applications.  </p>
+ </div>
+
+<div class="Skills">
+  <h3>Sandeep's Skills</h3>
+  <p>I would like to code in these technologies and also learn to code in many more</p>
+
+   <ul>
+     <li>HTML</li>
+     <li>CSS</li>
+     <li>javascript</li>
+     <li>JAVA</li>
+     <li>SQL</li>
+   </ul>
+</div>
+
+<div class="contact">
+  <p>Thanks for visiting!!!Get in contact with SANDEEP GUNDA via Facebook:<a href="https://www.facebook.com/sandy.sunny85"></a></p>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 </body>
 </html>
