--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
 </div>
 
 <div class="contact">
-  <p>Thanks for visiting!!!Get in contact with SANDEEP GUNDA via Facebook:<a href="https://www.facebook.com/sandy.sunny85"></a></p>
+  <p>Thanks for visiting!!!Get in contact with SANDEEP GUNDA via Facebook:<a href="https://www.facebook.com/sandy.sunny85">@sandy.sunny85</a></p>
 </div>
 
 
