--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
 </div>
 
 <div class="contact">
+  <h3>How to contact SANDEEP GUNDA</h3>
   <p>Thanks for visiting!!!Get in contact with SANDEEP GUNDA via Facebook:<a href="https://www.facebook.com/sandy.sunny85">@sandy.sunny85</a></p>
 </div>
 
