--- a/src/index.html
+++ b/src/index.html
@@ -9,18 +9,21 @@
 <body>
 
  <div class="header">
+   <div class="content-wrapper"></div>
   <h1> SaNdeeP GunDA</h1>.
   <h2>JAVA Developer CUM WEB Designer CUM SOFTWARE Developer</h2>
 </div>
 
  <div class="tagline">
+   <div class="content-wrapper"></div>
    <h3>Learn More About Me</h3>
    <p>I (Sandeep) is more interested in developing web applications and like to write code in java,develop java based applications.  </p>
  </div>
 
 <div class="Skills">
+  <div class="content-wrapper"></div>
   <h3>Sandeep's Skills</h3>
-  <p>I would like to code in these technologies and also learn to code in many more</p>
+  <p>I would like to code in these technologies and also willing to learn and code in many more</p>
 
    <ul>
      <li>HTML</li>
@@ -32,6 +35,7 @@
 </div>
 
 <div class="contact">
+  <div class="content-wrapper"></div>
   <h3>How to contact SANDEEP GUNDA</h3>
   <p>Thanks for visiting!!!Get in contact with SANDEEP GUNDA via Facebook:<a href="https://www.facebook.com/sandy.sunny85">@sandy.sunny85</a></p>
 </div>
